--- a/containers/php-fpm/Dockerfile
+++ b/containers/php-fpm/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:7.3.17-fpm-alpine
+FROM php:7.4-fpm-alpine
 
 ENV BUILD_DEPS wget curl git grep build-base make autoconf g++
 ENV PERSISTENT_DEPS net-tools hiredis-dev gmp-dev libmcrypt-dev libxml2-dev imagemagick-dev libjpeg-turbo-dev libpng-dev freetype-dev cyrus-sasl-dev libgsasl-dev libzip-dev pcre-dev libtool icu-dev
@@ -9,8 +9,8 @@ RUN apk add --no-cache --virtual .persistent-deps $PERSISTENT_DEPS
 
 RUN apk --update --no-cache add
 
-RUN docker-php-ext-install mysqli mbstring pdo pdo_mysql tokenizer xml exif pcntl bcmath zip
-RUN docker-php-ext-configure gd --with-gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ --with-png-dir=/usr/include/
+RUN docker-php-ext-install mysqli pdo pdo_mysql tokenizer xml exif pcntl bcmath zip
+RUN docker-php-ext-configure gd --with-freetype=/usr/include/ --with-jpeg=/usr/include/
 RUN docker-php-ext-install gd
 RUN docker-php-ext-install intl
 
