--- a/containers/php-fpm/Dockerfile
+++ b/containers/php-fpm/Dockerfile
@@ -6,14 +6,16 @@ ENV PERSISTENT_DEPS net-tools hiredis-dev gmp-dev libmcrypt-dev libxml2-dev imag
 RUN apk upgrade --no-cache --update \
     && apk add --no-cache --virtual .build-deps $BUILD_DEPS \
     && apk add --no-cache --virtual .persistent-deps $PERSISTENT_DEPS \
-    && apk --update --no-cache add \
-    && docker-php-ext-install mysqli pdo pdo_mysql xml exif pcntl bcmath zip \
+    && apk --update --no-cache add
+
+RUN docker-php-ext-install mysqli pdo pdo_mysql xml exif pcntl bcmath zip \
     && docker-php-ext-configure gd --with-freetype=/usr/include/ --with-jpeg=/usr/include/ \
     && docker-php-ext-install gd \
     && docker-php-ext-install intl \
-    && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer \
-    # Uninstall the grouping of dependencies called `.build-deps`.
-    && apk del .build-deps
+    && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+
+# Uninstall the grouping of dependencies called `.build-deps`.
+RUN apk del .build-deps
 
 EXPOSE 9000
 CMD ["php-fpm"]
